--- a/volumes/lembrador-contas/src/views/templates/scripts.html
+++ b/volumes/lembrador-contas/src/views/templates/scripts.html
@@ -28,27 +28,17 @@
          self.registration.showNotification('Lembrador de Contas', options)
       }
 
-      if (Notification.permission == 'default') {
-         $('.toast').toast({autohide: false})
-         $('#notifications-toast-container').css("display", "block");
-         $('#notifications-toast').toast('show')
-      }
-
-      // Check if the service worker API is supported
-      if ('serviceWorker' in navigator) {
-         navigator.serviceWorker.register('service-worker.js', { scope: '/' })
-            .then(async swRegistration => {
-               console.log(`Service Worker Registration (Scope: ${swRegistration.scope})`);
-               subscribePushManager(swRegistration)       
-            }).catch(error => {
-               let msg = `Service Worker Error (${error})`;
-               console.error(msg);
-            });
-      } else {
-         // happens when the app isn't served over a TLS connection (HTTPS)
-         // or if the browser doesn't support service workers
-         alert('Service Worker not available')
-         console.warn('Service Worker not available');
+      // urlB64ToUint8Array is a magic function that will encode the base64 public key
+      // to Array buffer which is needed by the subscription option
+      const urlB64ToUint8Array = base64String => {
+         const padding = '='.repeat((4 - (base64String.length % 4)) % 4)
+         const base64 = (base64String + padding).replace(/\-/g, '+').replace(/_/g, '/')
+         const rawData = atob(base64)
+         const outputArray = new Uint8Array(rawData.length)
+         for (let i = 0; i < rawData.length; ++i) {
+            outputArray[i] = rawData.charCodeAt(i)
+         }
+         return outputArray
       }
 
       async function subscribePushManager(swRegistration) {
@@ -58,6 +48,8 @@
             console.log('No pushManager subscription found. Creating one.')
             const publicKeyResponse = await send('GET', '/notifications/push/public_key')
             const applicationServerKey = urlB64ToUint8Array(JSON.parse(publicKeyResponse).publicKey)
+            console.log('publicKeyResponse', publicKeyResponse)
+            console.log('applicationServerKey', applicationServerKey)
 
             subscription = await swRegistration.pushManager.subscribe({
                userVisibleOnly: true,
@@ -87,6 +79,29 @@
          const rawContent = await fetch(url, options)
          const content = await rawContent.text()
          return content
+      }
+
+      if (Notification.permission == 'default') {
+         $('.toast').toast({autohide: false})
+         $('#notifications-toast-container').css("display", "block");
+         $('#notifications-toast').toast('show')
+      }
+
+      // Check if the service worker API is supported
+      if ('serviceWorker' in navigator) {
+         navigator.serviceWorker.register('service-worker.js', { scope: '/' })
+            .then(async swRegistration => {
+               console.log(`Service Worker Registration (Scope: ${swRegistration.scope})`);
+               subscribePushManager(swRegistration)       
+            }).catch(error => {
+               let msg = `Service Worker Error (${error})`;
+               console.error(msg);
+            });
+      } else {
+         // happens when the app isn't served over a TLS connection (HTTPS)
+         // or if the browser doesn't support service workers
+         alert('Service Worker not available')
+         console.warn('Service Worker not available');
       }
    })
 </script>
