--- a/volumes/lembrador-contas/src/views/templates/scripts.html
+++ b/volumes/lembrador-contas/src/views/templates/scripts.html
@@ -2,106 +2,5 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src='/service-worker.js'></script>
-<script>
-   $(document).ready(function () {
-      function hideNotificationsToast() {
-         $('#notifications-toast-container').remove()
-      }
-      
-      function requestNotificationPermission() {
-         hideNotificationsToast()
-         Notification.requestPermission().then(res => {
-            if(Notification.permission == 'granted') {
-               console.log("Granted permission")
-               showNotification()
-               return
-            }
-            console.log(res)
-         })
-      }
-
-      function showNotification() {
-         const options = {
-            body: 'Notificações ativadas'
-         }
-         self.registration.showNotification('Lembrador de Contas', options)
-      }
-
-      // urlB64ToUint8Array is a magic function that will encode the base64 public key
-      // to Array buffer which is needed by the subscription option
-      const urlB64ToUint8Array = base64String => {
-         const padding = '='.repeat((4 - (base64String.length % 4)) % 4)
-         const base64 = (base64String + padding).replace(/\-/g, '+').replace(/_/g, '/')
-         const rawData = atob(base64)
-         const outputArray = new Uint8Array(rawData.length)
-         for (let i = 0; i < rawData.length; ++i) {
-            outputArray[i] = rawData.charCodeAt(i)
-         }
-         return outputArray
-      }
-
-      async function subscribePushManager(swRegistration) {
-         let subscription = await swRegistration.pushManager.getSubscription()
-
-         if (!subscription) {
-            console.log('No pushManager subscription found. Creating one.')
-            const publicKeyResponse = await send('GET', '/notifications/push/public_key')
-            const applicationServerKey = urlB64ToUint8Array(JSON.parse(publicKeyResponse).publicKey)
-            console.log('publicKeyResponse', publicKeyResponse)
-            console.log('applicationServerKey', applicationServerKey)
-
-            subscription = await swRegistration.pushManager.subscribe({
-               userVisibleOnly: true,
-               applicationServerKey
-            })
-         }
-
-         if (!subscription) {
-            console.error('Unable to subscribe to pushManager.', err)
-            return
-         }
-
-         await send('POST', '/notifications/push/register', {
-            subscription
-         })
-      }
-
-      async function send(method, url, data) {
-         const options = {
-            method: method,
-            headers: {
-               // 'Accept': 'application/json',
-               'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data)
-         }
-         const rawContent = await fetch(url, options)
-         const content = await rawContent.text()
-         return content
-      }
-
-      if (Notification.permission == 'default') {
-         $('.toast').toast({autohide: false})
-         $('#notifications-toast-container').css("display", "block");
-         $('#notifications-toast').toast('show')
-      }
-
-      // Check if the service worker API is supported
-      if ('serviceWorker' in navigator) {
-         navigator.serviceWorker.register('service-worker.js', { scope: '/' })
-            .then(async swRegistration => {
-               console.log(`Service Worker Registration (Scope: ${swRegistration.scope})`);
-               subscribePushManager(swRegistration)       
-            }).catch(error => {
-               let msg = `Service Worker Error (${error})`;
-               console.error(msg);
-            });
-      } else {
-         // happens when the app isn't served over a TLS connection (HTTPS)
-         // or if the browser doesn't support service workers
-         alert('Service Worker not available')
-         console.warn('Service Worker not available');
-      }
-   })
-</script>
+<script src='/sw.js'></script>
+<script src='/main.js'></script>
