--- a/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
+++ b/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
@@ -4,7 +4,7 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="float-right small">Último processamento:
-                    <span data-mask="00/00/0000 00:00:00"><%= lastUpdate?.toLocaleString() %></span>
+                    <span data-mask="00/00/0000 00:00:00"><%= lastUpdate?.toLocaleDateString('pt-br') %></span>
                 </div>
                 <div class="starter-template">
                     <h1 class="title-1">
@@ -34,7 +34,7 @@
                                                 <%= bill.name %>
                                             </td>
                                             <td>
-                                                <span class="date" data-mask="00/00"><%= bill.dueDate ? bill.dueDate.toLocaleDateString() : '' %></span>
+                                                <span class="date" data-mask="00/00"><%= dueDate?.toLocaleDateString('pt-br') %></span>
                                             </td>
                                             <td>
                                                 <span class="money"><%= bill.value ? Number(bill.value).toFixed(2) : '' %></span>
