--- a/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
+++ b/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
@@ -34,7 +34,7 @@
                                                 <%= bill.name %>
                                             </td>
                                             <td>
-                                                <span class="date" data-mask="00/00"><%= dueDate?.toLocaleDateString('pt-br') %></span>
+                                                <span class="date" data-mask="00/00"><%= bill?.dueDate?.toLocaleDateString('pt-br') %></span>
                                             </td>
                                             <td>
                                                 <span class="money"><%= bill.value ? Number(bill.value).toFixed(2) : '' %></span>
