--- a/volumes/lembrador-contas/src/views/partials/header.ejs
+++ b/volumes/lembrador-contas/src/views/partials/header.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
     <title><%= typeof title !='undefined' ? title : 'Lembrador de Contas' %></title>
 </head>
