--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -37,9 +37,13 @@
           <a class="dropdown-item" href="/apis/list">APIs</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="/dashboard/processBills">Processar contas do mês</a>
+          <a class="dropdown-item" href="javascript:toggleTheme()">Alterar tema</a>
+        </div>
+      </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <a href="/dashboard/processBills" class="btn btn-outline-success my-2 my-sm-0">Processar contas</a>
-    </form>
   </div>
 </nav>
