Add icon property to bill

--- a/volumes/lembrador-contas/src/views/bill/newBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/newBill.ejs
@@ -28,6 +28,12 @@
                             </div>
                             <br>
                             <div class="form-group">
+                                <label for="icon">Ícone (classe FontAwesome)</label>
+                                <input type="text" class="form-control" id="icon" name="icon" placeholder="Ícone (classe FontAwesome)"
+                                    aria-describedby="basic-addon1">
+                            </div>
+                            <br>
+                            <div class="form-group">
                                 <label for="valueSourceType">Tipo FonteValor</label>
                                 <select name='valueSourceType' class="form-control" id="valueSourceType">
                                         <% var keys = Object.keys(valueSourceTypeEnum); keys.forEach(function(vst){ %>
