Adds functionality to allow bills to be attributed to users, enabling independent exibition e divison o values by bill users

--- a/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
+++ b/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
@@ -11,56 +11,13 @@
                         <%= title %>
                     </h1>
                     <br>
-                    <% activeBillData.forEach(function(data){ %>
-                        <br>
-                        <h2><%= data.month %></h2>
-                        <div class="float-right">Total:
-                            <span class="money font-weight-bold"><%= Number(data.totalValue).toFixed(2) %></span>
-                        </div>
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Nome</th>
-                                        <th>Venc.</th>
-                                        <th>Valor</th>
-                                        <th>Situação</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <% data.billList?.forEach(function(bill){ %>
-                                        <tr>
-                                            <td>
-                                                <%= bill.name %>
-                                            </td>
-                                            <td>
-                                                <span class="date" data-mask="00/00"><%= bill?.dueDate?.toLocaleDateString('pt-br') %></span>
-                                            </td>
-                                            <td>
-                                                <span class="money"><%= bill.value ? Number(bill.value).toFixed(2) : '' %></span>
-                                            </td>
-                                            <td>
-                                                <% if (activeBillStatusEnum[bill.status] == activeBillStatusEnum.PAID){ %>
-                                                <span class="material-symbols-outlined symbol-blue">
-                                                    done
-                                                </span>
-                                                <%} else {%>
-                                                <span class="material-symbols-outlined symbol-red">
-                                                    attach_money
-                                                </span>
-                                            </td>
-                                            <%}%>
-                                            <% if (activeBillStatusEnum[bill.status] == activeBillStatusEnum.UNPAID){ %>
-                                            <td>
-                                                <a href="dashboard/paybill/<%= bill._id %>" data-toggle="tooltip" title="Marcar como pago" class="btn material-symbols-outlined">done</a>
-                                            </td>
-                                            <%}%>
-                                        </tr>
-                                    <%})%>
-                                </tbody>
-                            </table>
-                        </div>
-                    <%})%>
+                    <select class="form-control" id="user" name="user" onchange="filterBillsByUser(this.value)">
+                        <% activeBillData.map(data => data.user).forEach(function(user){ %>
+                            <option value="<%= user._id %>"><%= user.name %></option>
+                        <% }) %>
+                    </select>
+                    <br>
+                    <div id="billList"></div>
                 </div>
             </div>
             <%- template.scripts %>
@@ -68,10 +25,15 @@
                     $(document).ready(function() {
                         applyMask();
                         $('[data-toggle="tooltip"]').tooltip();
+                        filterBillsByUser($('#user').val());
                     });
 
                     function applyMask() {
                         $('.money').mask('000.000.000.000.000,00', {reverse: true});
+                    }
+
+                    function filterBillsByUser(value) {
+                        $('#billList').load('/dashboard/user-bill-list/?userId=' + value)
                     }
                 </script>
     </body>
