--- a/volumes/lembrador-contas/src/views/bill/editBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/editBill.ejs
@@ -11,6 +11,14 @@
                     <form action="/bills/update" method="post">
                         <input type="hidden" name="id" value="<%= bill._id %>">
                         <div class="form-group">
+                            <label for="users">Usuários</label>
+                            <select class="form-control" name="users" id="users" multiple>
+                                <% activeUsers.forEach(function(user){ %>
+                                    <option <% if (bill.users.map(user => user._id.toString()).includes(user._id.toString())) {%>selected="selected"<% } %> value=<%= user._id %>><%= user.name %></option>
+                                <%})%>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label for="name">Nome</label>
                             <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
                                 aria-describedby="basic-addon1" value="<%= bill.name %>" required>
