--- a/volumes/lembrador-contas/src/views/bill/newBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/newBill.ejs
@@ -11,6 +11,14 @@
                         <br>
                         <form action="/bills/add" method="post">
                             <div class="form-group">
+                                <label for="users">Usuários</label>
+                                <select class="form-control" name="users" id="users" multiple>
+                                    <% activeUsers.forEach(function(user){ %>
+                                        <option value=<%= user._id %>><%= user.name %></option>
+                                    <%})%>
+                                </select>
+                            </div>
+                            <div class="form-group">
                                 <label for="name">Nome</label>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
                                     aria-describedby="basic-addon1" required>
